(lang dune 3.11)

(name server)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "tmwpwo")

(maintainers "tmwpwo")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name server)
 (synopsis "Iam trying smthg new")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
